--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-scroll": "^1.9.3",
     "sweetalert2": "^11.22.0",
     "tailwindcss": "^4.1.10"
   },
@@ -22,6 +23,7 @@
     "@eslint/js": "^9.25.0",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@types/react-scroll": "^1.8.10",
     "@vitejs/plugin-react": "^4.4.1",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
